src/test/extensions.graphqxl
input Input {
    foo: String
}

extend input Input
